# WebRTC-POC

./: README.md  receiver.py  requirements.txt  server.py  streamer.py
demo_video/: demo_video.webm
gstreamer_webrtc/: CMakeLists.txt
gstreamer_webrtc/include/: gstreamer_pipeline.h  webrtc_handler.h
gstreamer_webrtc/src/: gstreamer_pipeline.cpp  stream_controls.cpp  webrtc_handler.cpp
old/gstreamer_webrtc/include/: stream_controls.h
old/gstreamer_webrtc/src/: main.cpp  stream_controls.cpp
signaling_server/: server.py
udp/: receiver.py  streamer.py
